force-app/main/default/objects/Preferred_vendor__c/fields/Uptime_Performance__c.field-meta.xml
<CustomField>
    <fullName>Uptime_Performance__c</fullName>
    <inlineHelpText>What is your uptime performance of this system 2020, 2021, most recent 6 mo.’s, YTD</inlineHelpText>
    <label>Uptime Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>