force-app/main/default/objects/Preferred_vendor__c/fields/visualization_tools_and_capabilities__c.field-meta.xml
<CustomField>
    <fullName>visualization_tools_and_capabilities__c</fullName>
    <inlineHelpText>Discuss your visualization tools and capabilities</inlineHelpText>
    <label>visualization tools and capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>