force-app/main/default/objects/Preferred_vendor__c/fields/Warehouse_input_remarks__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_input_remarks__c</fullName>
    <label>Warehouse input remarks</label>
    <type>TextArea</type>
</CustomField>