force-app/main/default/objects/Preferred_vendor__c/fields/Willing_to_hold_inventory__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_hold_inventory__c</fullName>
    <inlineHelpText>Is potential Partner willing to hold inventory under a blanket PO and ship on demand?</inlineHelpText>
    <label>Willing to hold inventory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>