force-app/main/default/objects/Preferred_vendor__c/fields/Willingness_to_sign_distribution_agreeme__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_sign_distribution_agreeme__c</fullName>
    <inlineHelpText>We have a Distribution Agreement which discusses territory, protections, pricing, market support, sales targets and quotas, private label, and exclusivity. Are you willing to enter into and negotiate such an agreement to meet the minimum requirements to obtain Preferred Partnership status?</inlineHelpText>
    <label>Willingness to sign distribution agreeme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>