force-app/main/default/objects/Preferred_vendor__c/listViews/All_Preferred_Vendors.listView-meta.xml
<ListView>
    <fullName>All_Preferred_Vendors</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>ContactName__c</columns>
    <columns>Email_Contact__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Preferred Vendors</label>
</ListView>